# ahcapp

./: .gitignore  README.md  mypy.ini  pyproject.toml
ahc-app-backend/: cdk.json  package-lock.json  package.json
ahc-app-backend/lambda/Exec/: Dockerfile  app.py  type.py
ahc-app-backend/lambda/InputAnalyzer/: app.py  type.py
ahc-app-backend/lambda/Presign/: Dockerfile  app.py  type.py
ahc-app-backend/lambda/ResultHandler/: Dockerfile  app.py  const.py  type.py
ahc-app-backend/lambda/Tester/: Dockerfile  app.py  type.py
ahc-app-backend/lambda/Tests/: test_exec.py
ahc-app-backend/lambda/example/: inputAnalyzer.py  tester.py
ahc-app-backend/lib/: ahc-app-backend-stack.ts  config.ts  cors.ts  createApi.ts  createLambda.ts  exec.ts  inputAnalyzer.ts  presign.ts  resuletHandler.ts  tester.ts
ahc-app-backend/test/: ahc-app-backend.test.ts
ahc-app-frontend/: package-lock.json  package.json
ahc-app-frontend/amplify/: team-provider-info.json
ahc-app-frontend/amplify/.config/: project-config.json
ahc-app-frontend/amplify/backend/: backend-config.json
ahc-app-frontend/amplify/backend/auth/ahcappfrontend458c5a81/: cli-inputs.json
ahc-app-frontend/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
ahc-app-frontend/src/: App.tsx  index.tsx
ahc-app-frontend/src/components/: BasicTable.tsx  Lambda.ts  S3.ts  S3downloader.ts
ahc-app-frontend/src/pages/: CodeTest.tsx  Header.css  Header.tsx  Home.tsx  style.css  type.ts  utils.ts
ahc-app-frontend/src/pages/codeTest/: Analyzer.tsx  BrowseModal.tsx  Executor.tsx  Home.tsx  Modal.tsx  type.ts
(+1 files in other folders)
